nexus/nexus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: ci
spec:
  selector:
    matchLabels:
      app: nexus
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: sonatype/nexus3
        imagePullPolicy: IfNotPresent
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
        - name: nexus-data-volume
          mountPath: /nexus-data
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: nexus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: ci
spec:
  type: ClusterIP	# default
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker 
  selector:
    app: nexus
