nexus/docker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #nginx.ingress.kubernetes.io/app-root: /nexus
spec:
  rules:
  - host: docker.ted.mighty
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus
          servicePort: 5000
